fix alignment

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ body {
 
 .resume {
     background-color: #ffffff; 
-    min-width: 850px;
-    max-width: 850px;
+    min-width: 875px;
+    max-width: 875px;
     align-content: center;
     padding-left: 40px;
     padding-right: 20px;
@@ -26,7 +26,8 @@ body {
     color: #888888;
     text-decoration: none;
     margin-bottom: 20px;
-    padding: 20px;
+    padding: 10px;
+    padding-top: 22px;
     text-align: right;
 }
 
